force-app/main/default/objects/Care_Plan_Intervention__c/Care_Plan_Intervention__c.object-meta.xml
<CustomObject>
    <label>Care Plan Intervention</label>
    <nameField>
        <label>Care Plan Intervention Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Care Plan Interventions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>