force-app/main/default/objects/Care_Plan_Intervention__c/fields/Care_Plan_Int_Duration_Optional__c.field-meta.xml
<CustomField>
    <fullName>Care_Plan_Int_Duration_Optional__c</fullName>
    <label>Duration (Optional)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>