force-app/main/default/objects/Care_Plan_Intervention__c/fields/Care_Plan_Int_Specific_Intervention__c.field-meta.xml
<CustomField>
    <fullName>Care_Plan_Int_Specific_Intervention__c</fullName>
    <label>Specific Intervention</label>
    <type>TextArea</type>
</CustomField>