force-app/main/default/objects/Care_Plan_Intervention__c/fields/Care_Plan_Intervention_Category__c.field-meta.xml
<CustomField>
    <fullName>Care_Plan_Intervention_Category__c</fullName>
    <label>Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>