force-app/main/default/objects/Care_Plan_Intervention__c/fields/Care_Plan_Intervention_Details__c.field-meta.xml
<CustomField>
    <fullName>Care_Plan_Intervention_Details__c</fullName>
    <label>Intervention Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>