force-app/main/default/objects/Care_Plan_Intervention__c/fields/Care_Plan_Intervention_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Care_Plan_Intervention_Frequency__c</fullName>
    <label>Frequency</label>
    <length>100</length>
    <type>Text</type>
</CustomField>