force-app/main/default/objects/Care_Plan_Intervention__c/fields/Care_Plan_Template__c.field-meta.xml
<CustomField>
    <fullName>Care_Plan_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Care Plan Template</label>
    <referenceTo>CarePlanTemplate</referenceTo>
    <relationshipLabel>Care Plan Interventions</relationshipLabel>
    <relationshipName>Care_Plan_Interventions</relationshipName>
    <type>Lookup</type>
</CustomField>